@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingexts--head--0.7
 #
 
+2005-01-30 00:22:11 GMT	John Goerzen <jgoerzen@complete.org>	patch-8
+
+    Summary:
+      Checkpointing
+    Revision:
+      missingexts--head--0.7--patch-8
+
+
+    modified files:
+     ChangeLog Python/Instances.hs
+
+
 2005-01-30 00:15:42 GMT	John Goerzen <jgoerzen@complete.org>	patch-7
 
     Summary:
